Fix menu + update condition for loading the correct css. Remove unused template.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,7 @@
     {{ partial "head.html" . }}
     {{ partial "stylesheets.html" . }}
     <body>
-      {{ .Content }}
+        {{ partial "nav_main.html" . }}
+        {{ .Content }}
     </body>
 </html>
