Update scss files: refactor code.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,6 +2,9 @@
     {{ partial "stylesheets.html" . }}
     <body>
         {{ partial "nav_main.html" . }}
-        {{ .Content }}
+
+        <article role="main">
+            {{ .Content }}
+        </article>
     </body>
 </html>
