--- a/scss/blog.scss
+++ b/scss/blog.scss
@@ -1,50 +1,22 @@
-@import "_variables";
-@import "_generic";
-@import "_menu";
-@import "_code";
+@import url(base.min.css);
+
+@import "variables";
+@import "mixins";
+@import "flexbox";
+@import "code";
 
 .header-img {
-    @include mq-min(517px) {
+    @include mq-min(517) {
         width: 100%;
         height: 300px;
         margin-bottom: 30px;
-        background: url(../img/paardebloemen.jpg) no-repeat;
+        background: url("../img/paardebloemen.jpg") no-repeat;
         background-size: cover;
         background-position: 0 10%;
     }
 }
 
 h2 { margin-top: 4rem; }
-
-[role="main"],
-[role="article"] {
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-[role="article"] {
-    ul {
-        margin: 0 0 15px;
-        padding: 0;
-        list-style-type: none;
-
-        li {
-            position: relative;
-            padding-left: 25px;
-
-            &:before {
-                position: absolute;
-                left: 0;
-                top: 8px;
-                display: block;
-                width: 10px;
-                height: 10px;
-                content: "";
-                background-color: $c-main;
-            }
-        }
-    }
-}
 
 [role="list"] {
     margin: 4rem 0 0;
@@ -63,7 +35,7 @@ h2 { margin-top: 4rem; }
 // ============
 // RATING STARS
 // ------------
-[class^="icon-"]:before,
+[class^="icon-"]::before,
 [class*=" icon-"] {
     font-family: mvt-icons;
     line-height: 1px;
@@ -85,18 +57,41 @@ $stars-list: (
     height: 32px;
 
     // Hide radio buttons
-    input[type="radio"] {
-        margin-left: -19px;
-    }
-
-    label {
-        cursor: pointer;
-        // pointer-events: none; // Disable click event on the custom label
-    }
+    [type="radio"] { margin-left: -19px; }
+    label { cursor: pointer; }
     .icon-star { font-size: 3rem; }
 }
 // ------------------
 // @END RANKING STARS
 // ==================
+
+// next + prev arrows
+.nav-arrows {
+    width: 100px;
+    margin: 0 auto 30px;
+
+    // arrow links
+    a {
+        display: inline-block;
+        border-style: solid;
+        @include transition(border-color 0.25s);
+    }
+}
+
+// Style the prev + left arrow including hover
+.arrow-prev {
+    margin-right: 20px;
+    border-width: 15px 20px 15px 0;
+    border-color: transparent $c-main transparent transparent;
+
+    &:hover { border-color: transparent $c-hover transparent transparent; }
+}
+
+.arrow-next {
+    border-width: 15px 0 15px 20px;
+    border-color: transparent transparent transparent $c-main;
+
+    &:hover { border-color: transparent transparent transparent $c-hover; }
+}
 
 @import "_print";
