Create js directory, update Makefile to generate minified js and place it in the correct directories, update make clean.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,5 +6,7 @@
         <article role="main">
             {{ .Content }}
         </article>
+        <script src="{{ .Site.BaseURL }}js/base.min.js"></script>
+        {{ partial "scripts.html" . }}
     </body>
 </html>
