--- a/layouts/fronteers/single.html
+++ b/layouts/fronteers/single.html
@@ -2,19 +2,21 @@
     {{ partial "stylesheets.html" . }}
     <body>
         {{ partial "nav_main.html" . }}
-        <div class="nav-arrows">
-            {{ if .NextInSection }}
-            <a href="{{ .NextInSection.Permalink }}" class="arrow-prev"
-                title="{{ .NextInSection.Title }}"></a>
-            {{ end }}
-            {{ if .PrevInSection }}
-                {{ if eq .PrevInSection.Title "Fronteers Conference 2012" }}
-                    {{ else }}
-                        <a href="{{ .PrevInSection.Permalink }}" class="arrow-next"
-                            alt="{{ .PrevInSection.Title }}"></a>
+            <div class="nav-arrows">
+                {{ if .NextInSection }}
+                <a href="{{ .NextInSection.Permalink }}" class="arrow-prev"
+                    title="{{ .NextInSection.Title }}"></a>
                 {{ end }}
-            {{ end }}
+                {{ if .PrevInSection }}
+                    {{ if eq .PrevInSection.Title "Fronteers Conference 2012" }}
+                        {{ else }}
+                            <a href="{{ .PrevInSection.Permalink }}" class="arrow-next"
+                                alt="{{ .PrevInSection.Title }}"></a>
+                    {{ end }}
+                {{ end }}
+            </div>
+            {{ .Content }}
         </div>
-        {{ .Content }}
+        {{ partial "scripts.html" . }}
     </body>
 </html>
