--- a/layouts/section/conf_2012.html
+++ b/layouts/section/conf_2012.html
@@ -3,15 +3,16 @@
 <body>
     {{ partial "nav_main.html" . }}
 
-    <div class="header-img"></div>
-    <div role="main">
-        <h1>Fronteers conference 2012</h1>
-        <p>This was my first Fronteers conference. It was really awesome. Interesting talks and hang out with fellow front end developers. The conference was held at a great location (Tuschinski Theater, Amsterdam). Here you find my notes of this conference, so enjoy the reading and watching the video's.</p>
-        <ul role="list">
-            {{ range .Data.Pages}}
-                {{ .Render "li" }}
-            {{ end }}
-        </ul>
+        <div class="header-img"></div>
+        <div role="main">
+            <h1>Fronteers conference 2012</h1>
+            <p>This was my first Fronteers conference. It was really awesome. Interesting talks and hang out with fellow front end developers. The conference was held at a great location (Tuschinski Theater, Amsterdam). Here you find my notes of this conference, so enjoy the reading and watching the video's.</p>
+            <ul role="list">
+                {{ range .Data.Pages}}
+                    {{ .Render "li" }}
+                {{ end }}
+            </ul>
+        </div>
     </div>
-</div>
+    {{ partial "scripts.html" . }}
 </body>
