style 404 error page.

--- a/scss/page_errors.scss
+++ b/scss/page_errors.scss
@@ -3,8 +3,7 @@
 @import "variables";
 @import "mixins";
 
-[role="main"],
-[role="article"] {
+section {
     max-width: 800px;
     margin: 0 auto;
 }
