--- a/scss/base.scss
+++ b/scss/base.scss
@@ -6,7 +6,7 @@
 // * 2: Specifies a size adjustment for displaying text content on smartphones.
 // * 3: Improve text-rendering in Webkit browsers and firefox on OSX.
 // * 4: Set the kerning and ligatures for current and future browsers.
-//      Smashing Booke #4 Chapter 9.
+//      Smashing Book #4 Chapter 9.
 
 :root {
     @include text-adjust; // * 2 *
@@ -16,6 +16,7 @@
     height: 100%;
     font-size: 62.5%; // * 1 *
     color: $c-text;
+    background-color: #fff;
 }
 
 body {
@@ -24,11 +25,13 @@ body {
     padding: 0;
     font-family: $font-main;
     font-size: 1.8rem;
-    background-color: #f2f4f3;
+
 }
 
+.scroll-disabled { overflow: hidden; }
+
 a {
-    @include transition(color 0.25s);
+    transition: color 0.25s;
     color: $c-main;
 
     &:hover { color: $c-hover; }
@@ -58,11 +61,12 @@ blockquote {
 
     &::before {
         position: absolute;
-        top: 12px;
+        top: 0;
         left: 0;
         font-size: 333.33%;
         content: "\2018";
         color: $c-main;
+        line-height: 71%;
     }
 }
 
@@ -130,190 +134,368 @@ figure {
 }
 
 .visualwrapper {
-    width: 100%;
-    max-width: 1200px;
-    min-height: 100%;
+    max-width: 140rem;
     margin: 0 auto;
-    background-color: #fff;
-
-    @include mq-max(517) {
-        padding: 100px 30px 10px;
-    }
-
-    @include mq-min(517) {
-        padding: 36px 30px;
-        box-shadow: 0 0 4px 0 rgba(#000, 0.25);
-    }
+    padding: 3vw;
 }
+
 // ====
 // MENU
 // ----
 
-[role="navigation"] { font-family: $font-menu; }
-[role="menuitem"] { text-decoration: none; }
+[role="navigation"] {
+    height: 6rem;
+    padding-right: 1rem;
+    font-size: 1.6rem;
+    background-color: $c-header;
+}
+
+
+.hamburger-wrapper {
+    @include flexbox();
+    @include align-items(center);
+    position: relative;
+    margin-left: auto;
+    width: 10.5rem;
+    padding: 2rem 1.3rem 1.9rem;
+    color: #fff;
+    cursor: pointer;
+}
+
+.menu-text {
+    font-weight: bold;
+    font-size: 1.8rem;
+    margin-left: 1.5rem;
+}
+
+.hamburger {
+    @include flex(0, 0, 21px);
+    transform: translateZ(0);
+    transition: transform 0.5s, background-color 0.3s;
+    position: relative;
+    width: 20px;
+    height: 2px;
+    background-color: #fff;
+
+    &::after,
+    &::before {
+        transition: transform 0.5s, background-color 0.3s;
+        position: absolute;
+        display: block;
+        width: 21px;
+        height: 2px;
+        content: "";
+        background-color: #fff;
+    }
+
+    &::after { top: 6px; }
+    &::before { top: -6px; }
+}
+// @End  hamburger icon animation
+// ------------------------------
+
+.menu {
+    @include flexbox();
+    @include justify-content(center);
+    @include align-items(center);
+    @include transition(
+        visibility 400ms ease-in-out,
+        opacity 400ms ease-in-out
+    );
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+    opacity: 0;
+    background-color: rgba(23, 47, 14, 0.95);
+
+    ul {
+        @include transition(opacity 500ms 500ms ease-in);
+
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        opacity: 0;
+    }
+}
+
+[role="menuitem"] {
+    @include transition(opacity 350ms ease-out);
+    position: relative;
+    width: 25vw;
+    min-width: 25rem;
+    margin-bottom: 3rem;
+    padding-bottom: 1rem;
+    font-size: 3.5rem;
+    text-align: center;
+    opacity: 0;
+
+    a {
+        color: #fff;
+        text-decoration: none;
+
+        &::before,
+        &::after {
+            display: inline-block;
+            opacity: 0;
+            @include transition(all 0.5s);
+        }
+
+        &::before {
+            content: "{";
+            @include transform(translateX(2rem));
+        }
+
+        &::after {
+            content: "}";
+            @include transform(translateX(-2rem));
+        }
+
+        &.selected,
+        &:hover {
+            &::before,
+            &::after {
+                opacity: 1;
+                @include transform(translateX(0));
+            }
+        }
+    }
+
+    &::after {
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        display: block;
+        height: 1px;
+        content: "";
+        background: linear-gradient(to right,
+            rgba(#fff, 0) 0,
+            #fff 25%,
+            #fff 75%,
+            rgba(#fff, 0) 100%);
+    }
+
+    // span {
+    //     position: relative;
+    //     display: block;
+    //     @include transition(transform 0.5s);
+    //
+    //     &::before {
+    //         position: absolute;
+    //         top: 100%;
+    //         color: #fff;
+    //         content: attr(data-hover);
+    //         @include transform(translate3d(0, 0, 0));
+    //     }
+    // }
+}
+
+// Show menu when checkbox is checked.
+// Add animation
+// scss-lint:disable NestingDepth
+.toggle-menu {
+    display: none;
+
+    &:checked {
+        + [role="navigation"] {
+
+            .hamburger-wrapper { z-index: 10; }
+
+            .hamburger {
+                background-color: transparent;
+
+                &::before { transform: translateY(6px) rotate(45deg); }
+                &::after { transform: translateY(-6px) rotate(-45deg); }
+            }
+
+
+            .menu {
+                visibility: visible;
+                opacity: 1;
+
+                ul,
+                [role="menuitem"] { opacity: 1; }
+            }
+
+            //animate menu items
+            @for $i from 1 through 4 {
+                [role="menuitem"]:nth-of-type(#{$i}) {
+                    @include transition-delay(220ms * $i);
+                }
+            }
+        }
+    }
+}
+// scss-lint:enable NestingDepth
+
+
 
 // Breakpoints
 // -----------
 
-@include mq-max(517) {
-    // Position the menu outside the viewport
-    [role="navigation"] {
-        @include transform(translateX(-230px) translateZ(0));
-        @include transition(transform 0.5s ease-in-out);
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        width: 200px;
-        font-size: 1.6rem;
-        background-color: $c-main;
-        z-index: 2;
-
-        &.active {
-            @include transform(translateX(-30px));
-            box-shadow: 2px 0 6px 0 rgba(#000, 0.5);
-        }
-    }
-
-    // Position items as a list
-    [role="menuitem"] {
-        display: block;
-        color: #fff;
-        padding: 0.4rem 0.8rem 0.4rem 1.2rem;
-        border-top: 1px solid hsla(0, 0, 100%, 0.25);
-        border-bottom: 1px solid hsla(0, 0, 30%, 0.25);
-
-        &:first-of-type { margin-top: 40px; }
-
-        &.selected {
-            background-color: darken($c-main, 10%);
-            border-bottom: 1px solid hsla(0, 0, 25%, 0.25);
-        }
-
-        &:hover { color: #fff; }
-    }
-
-    .mobile-wrapper {
-        border-top: 1px solid hsla(0, 0, 25%, 0.25);
-        border-bottom: 1px solid hsla(0, 0, 100%, 0.25);
-    }
-
-    // Hamburger animation changes which toggles to X icon
-    // ---------------------------------------------------
-    .hamburger-wrapper {
-        @include flexbox();
-        @include transform(translateX(200px) translateZ(0));
-        @include transition(transform 0.5s ease-in-out);
-        position: absolute;
-        top: 0;
-        width: 105px;
-        height: 30px;
-        padding: 20px 13px 19px;
-        color: #fff;
-        background-color: $c-main;
-        cursor: pointer;
-
-        .active & { @include transform(translateX(0)) }
-    }
-
-    .menu-text {
-        @include flex-grow(1);
-        margin-top: -10px;
-        margin-left: 10px;
-    }
-
-    .hamburger {
-        @include flex(0, 0, 21px);
-        @include transform(translateZ(0));
-        @include transition(transform 0.5s, background-color 0.3s);
-        position: relative;
-        width: 20px;
-        height: 2px;
-        background-color: #fff;
-
-        &::after,
-        &::before {
-            @include transition(transform 0.5s, background-color 0.3s);
-            position: absolute;
-            display: block;
-            width: 21px;
-            height: 2px;
-            content: "";
-            background-color: #fff;
-        }
-
-        &::after { top: 6px; }
-        &::before { top: -6px; }
-
-        &.active {
-            background-color: transparent;
-
-            &::before { @include transform(translateY(6px) rotate(45deg)) }
-            &::after { @include transform(translateY(-6px) rotate(-45deg)) }
-        }
-    }
-    // @End  hamburger icon animation
-    // ------------------------------
-
-    .overlay {
-        display: none;
-
-        &.active {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            display: block;
-            background-color: rgba(0, 0, 0, 0.5);
-            z-index: 1;
-        }
-    }
-
-    .scroll-disabled { overflow: hidden; }
-}
-
-// Show the main menu horizontal with the gradient border top + bottom
-@include mq-min(517) {
-    [role="navigation"] {
-        position: relative;
-        margin-bottom: 50px;
-        padding: 10px 25px;
-        text-align: center;
-        font-size: 2rem;
-
-        &::before,
-        &::after {
-            position: absolute;
-            left: 0;
-            right: 0;
-            display: block;
-            height: 1px;
-            content: "";
-            @include gradient(left, to right,
-                rgba($c-main, 0) 0,
-                $c-main 25%,
-                $c-main 75%,
-                rgba($c-main, 0) 100%);
-        }
-
-        &::before { top: 0; }
-        &::after { bottom: 0; }
-    }
-
-    [role="menuitem"] {
-        display: inline-block;
-        padding: 0 8px;
-        color: $c-main;
-
-        &.selected {
-            &::before { content: "{"; }
-            &::after { content: "}"; }
-        }
-    }
-
-    .hamburger-wrapper { display: none; }
-}
-
+// @include mq-max(517) {
+//     // Position the menu outside the viewport
+//     [role="navigation"] {
+//         @include transform(translateX(-230px) translateZ(0));
+//         @include transition(transform 0.5s ease-in-out);
+//         position: absolute;
+//         top: 0;
+//         bottom: 0;
+//         width: 200px;
+//         font-size: 1.6rem;
+//         background-color: $c-main;
+//         z-index: 2;
+//
+//         &.active {
+//             @include transform(translateX(-30px));
+//             box-shadow: 2px 0 6px 0 rgba(#000, 0.5);
+//         }
+//     }
+//
+//     // Position items as a list
+//     [role="menuitem"] {
+//         display: block;
+//         color: #fff;
+//         padding: 0.4rem 0.8rem 0.4rem 1.2rem;
+//         border-top: 1px solid hsla(0, 0, 100%, 0.25);
+//         border-bottom: 1px solid hsla(0, 0, 30%, 0.25);
+//
+//         &:first-of-type { margin-top: 40px; }
+//
+//         &.selected {
+//             background-color: darken($c-main, 10%);
+//             border-bottom: 1px solid hsla(0, 0, 25%, 0.25);
+//         }
+//
+//         &:hover { color: #fff; }
+//     }
+//
+//     .mobile-wrapper {
+//         border-top: 1px solid hsla(0, 0, 25%, 0.25);
+//         border-bottom: 1px solid hsla(0, 0, 100%, 0.25);
+//     }
+//
+//     // Hamburger animation changes which toggles to X icon
+//     // ---------------------------------------------------
+//     .hamburger-wrapper {
+//         @include flexbox();
+//         @include transform(translateX(200px) translateZ(0));
+//         @include transition(transform 0.5s ease-in-out);
+//         position: absolute;
+//         top: 0;
+//         width: 105px;
+//         height: 30px;
+//         padding: 20px 13px 19px;
+//         color: #fff;
+//         background-color: $c-main;
+//         cursor: pointer;
+//
+//         .active & { @include transform(translateX(0)) }
+//     }
+//
+//     .menu-text {
+//         @include flex-grow(1);
+//         margin-top: -10px;
+//         margin-left: 10px;
+//     }
+//
+//     .hamburger {
+//         @include flex(0, 0, 21px);
+//         @include transform(translateZ(0));
+//         @include transition(transform 0.5s, background-color 0.3s);
+//         position: relative;
+//         width: 20px;
+//         height: 2px;
+//         background-color: #fff;
+//
+//         &::after,
+//         &::before {
+//             @include transition(transform 0.5s, background-color 0.3s);
+//             position: absolute;
+//             display: block;
+//             width: 21px;
+//             height: 2px;
+//             content: "";
+//             background-color: #fff;
+//         }
+//
+//         &::after { top: 6px; }
+//         &::before { top: -6px; }
+//
+//         &.active {
+//             background-color: transparent;
+//
+//             &::before { @include transform(translateY(6px) rotate(45deg)) }
+//             &::after { @include transform(translateY(-6px) rotate(-45deg)) }
+//         }
+//     }
+//     // @End  hamburger icon animation
+//     // ------------------------------
+//
+//     .overlay {
+//         display: none;
+//
+//         &.active {
+//             position: fixed;
+//             top: 0;
+//             left: 0;
+//             right: 0;
+//             bottom: 0;
+//             display: block;
+//             background-color: rgba(0, 0, 0, 0.5);
+//             z-index: 1;
+//         }
+//     }
+//
+//
+// }
+//
+// // Show the main menu horizontal with the gradient border top + bottom
+// @include mq-min(517) {
+//     [role="navigation"] {
+//         position: relative;
+//         margin-bottom: 50px;
+//         padding: 10px 25px;
+//         text-align: center;
+//         font-size: 2rem;
+//
+//         &::before,
+//         &::after {
+//             position: absolute;
+//             left: 0;
+//             right: 0;
+//             display: block;
+//             height: 1px;
+//             content: "";
+//             @include gradient(left, to right,
+//                 rgba($c-main, 0) 0,
+//                 $c-main 25%,
+//                 $c-main 75%,
+//                 rgba($c-main, 0) 100%);
+//         }
+//
+//         &::before { top: 0; }
+//         &::after { bottom: 0; }
+//     }
+//
+//     [role="menuitem"] {
+//         display: inline-block;
+//         padding: 0 8px;
+//         color: $c-main;
+//
+//         &.selected {
+//             &::before { content: "{"; }
+//             &::after { content: "}"; }
+//         }
+//     }
+//
+//     .hamburger-wrapper { display: none; }
+// }
+//
 // ---------
 // @END MENU
 // =========
