--- a/scss/home.scss
+++ b/scss/home.scss
@@ -11,11 +11,11 @@ section {
     }
 }
 
-[role="navigation"] {
-    @include mq-min(517) {
-        @include animation(menu-anim 1.25s ease-out);
-    }
-}
+// [role="navigation"] {
+//     @include mq-min(517) {
+//         @include animation(menu-anim 1.25s ease-out);
+//     }
+// }
 
 // ===========
 // HOME BLOCKS
@@ -24,8 +24,8 @@ section {
 // portrait + fronteers logo, blog
 .img-border {
     display: block;
-    width: 125px;
-    height: 125px;
+    width: 12.5rem;
+    height: 12.5rem;
     margin: 0 auto;
     border: 2px solid #fff;
     box-shadow: 0 0 4px 0 $c-shadow;
@@ -39,9 +39,9 @@ section {
 .block-home {
 
     &:nth-child(3n-1) .img-border {
-        padding-top: 23px;
-        padding-left: 21px;
-        background-color: $c-main;
+        padding-top: 2.3rem;
+        padding-left: 2.1rem;
+        background-color: $c-header;
     }
 
     &-visual {
@@ -56,22 +56,19 @@ section {
     @include mq-max(900) {
         @include flexbox();
         @include flex-flow(row wrap);
-        margin-bottom: 20px;
+        margin-bottom: 2rem;
 
         &-visual {
-            margin-right: 20px;
-            @include flex(0, 0, 125px);
+            margin-right: 2rem;
+            @include flex(0, 0, 12.5rem);
         }
 
-        &-text { @include flex(1, 0, 250px); }
+        &-text { @include flex(1, 0, 25rem); }
     }
 
     @include mq-min(900) {
-        @include flex-grow(1);
-        @include flex-shrink(1);
-
-        &:not(:last-child) { margin-right: 30px; }
-        &-visual { text-align: center; }
+        @include flex(1);
+        margin: 0 2.5vw;
     }
 
     // animate blocks
