--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -4,12 +4,26 @@
         {{ partial "nav_main.html" . }}
             <div class="nav-arrows">
                 {{ if .NextInSection }}
-                <a href="{{ .NextInSection.Permalink }}" class="arrow-prev"
-                    title="{{ .NextInSection.Title }}"></a>
+                    <a href="{{ .NextInSection.Permalink }}" class="arrow-prev"
+                        title="{{ .NextInSection.Title }}">
+                        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                                <polygon fill="#FFFFFF" transform="translate(23.862343, 24.294813) scale(-1, 1) translate(-23.862343, -24.294813) " points="15 33.1599091 23.8614086 24.2965271 15.0001039 15.4334048 19.4314314 11 32.7246868 24.2965791 19.4315353 37.5896267"></polygon>
+                            </g>
+                        </svg>
+                    </a>
                 {{ end }}
                 {{ if .PrevInSection }}
                     <a href="{{ .PrevInSection.Permalink }}" class="arrow-next"
-                        alt="{{ .PrevInSection.Title }}"></a>
+                            alt="{{ .PrevInSection.Title }}">
+                        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                                <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+                            </g>
+                        </svg>
+                    </a>
                 {{ end }}
             </div>
             <article role="article">
@@ -17,6 +31,30 @@
                 {{ .Date.Format "January 2, 2006" }} <br>
                 {{ .Content }}
             </article>
+            <div class="nav-arrows">
+                {{ if .NextInSection }}
+                    <a href="{{ .NextInSection.Permalink }}" class="arrow-prev"
+                        title="{{ .NextInSection.Title }}">
+                        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                                <polygon fill="#FFFFFF" transform="translate(23.862343, 24.294813) scale(-1, 1) translate(-23.862343, -24.294813) " points="15 33.1599091 23.8614086 24.2965271 15.0001039 15.4334048 19.4314314 11 32.7246868 24.2965791 19.4315353 37.5896267"></polygon>
+                            </g>
+                        </svg>
+                    </a>
+                {{ end }}
+                {{ if .PrevInSection }}
+                    <a href="{{ .PrevInSection.Permalink }}" class="arrow-next"
+                            alt="{{ .PrevInSection.Title }}">
+                        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                                <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+                            </g>
+                        </svg>
+                    </a>
+                {{ end }}
+            </div>
         </div>
         {{ partial "scripts.html" . }}
     </body>
