--- a/layouts/fronteers/li.html
+++ b/layouts/fronteers/li.html
@@ -4,4 +4,14 @@
     </h2>
     <div class="blog-date">{{ .Date.Format "January 2, 2006" }}</div>
     {{.Description}}
+    <a href="{{ if eq .Title "Fronteers Conference 2012" }}/conf_2012/{{ else }}{{ .Permalink }}{{ end }}"
+            class="read-more">
+        <span>Read more</span>
+        <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+            </g>
+        </svg>
+    </a>
 </li>
