Update about text, tweak homepage.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,6 +17,15 @@
                     <a href="http://www.dreamsolution.nl">Dreamsolution</a> in Delft.
                   </p>
                 </div>
+                <a href="about" class="read-more">
+                    <span>Read more</span>
+                    <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                            <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+                        </g>
+                    </svg>
+                </a>
               </div>
 
               <div class="block-home">
@@ -39,6 +48,15 @@
                      are related to front end development.
                   </p>
                 </div>
+                <a href="blog" class="read-more">
+                    <span>Read more</span>
+                    <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                            <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+                        </g>
+                    </svg>
+                </a>
               </div>
 
               <div class="block-home">
@@ -50,13 +68,22 @@
                 </div>
                 <div class="block-home-text">
                   <h2><a href="fronteers">Fronteers</a></h2>
-                  <p>I'm a member and volunteer of <a href="http://www.fronteers.nl">
+                  <p>I'm a member of <a href="http://www.fronteers.nl">
                     Fronteers</a>, a Dutch non-profit trade organisation for front end
                     developers. On my Fronteers page you'll find blog posts of the meetings
                     and the <a href="http://fronteers.nl/congres">Fronteers
                     Conferences</a> I attended.
                   </p>
                 </div>
+                <a href="fronteers" class="read-more">
+                    <span>Read more</span>
+                    <svg viewBox="0 0 48 48" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+                            <rect x="0" y="0.044921875" width="47.8613281" height="47.8613281" rx="3"></rect>
+                            <polygon fill="#FFFFFF" points="15.953776 32.8406817 24.8151846 23.9772997 15.9538799 15.1141774 20.3852074 10.6807726 33.6784628 23.9773517 20.3853113 37.2703993"></polygon>
+                        </g>
+                    </svg>
+                </a>
               </div>
           </section>
       </div>
