--- a/scss/home.scss
+++ b/scss/home.scss
@@ -31,6 +31,9 @@ section {
 }
 
 .block-home {
+    position: relative;
+    padding-bottom: 6rem;
+    border-bottom: 1px solid rgba($c-shadow, 0.25);
 
     &:nth-child(3n-1) .img-border {
         padding-top: 2.3rem;
@@ -77,6 +80,11 @@ section {
                     );
             }
         }
+    }
+
+    .read-more {
+        position: absolute;
+        bottom: 1rem;
     }
 }
 
