Update favicon, remove unused  images and fonts.

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -18,4 +18,4 @@
         <title>{{ .Site.Title }} - front end developer </title>
     {{ end }}
 
-    <link rel="icon" type="image/ico" href="{{ .Site.BaseURL }}img/favicon.ico"/>
+    <link rel="icon" type="image/png" href="{{ .Site.BaseURL }}img/favicon.png"/>
