--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,17 +3,11 @@ $c-main: #7cb342;
 $c-shadow: #3c4946;
 $c-hover: #558b2f;
 $c-header: $c-main;
-$color-maintitle: $c-main;
 
 $color-subtitle: #a9a9a9;
-$code-indent: 12px;
+$code-indent: 1.2rem;
 $bg-code: rgba(#c8d1cf, 0.15);
 
 $font-generic: arial, helvetica, sans-serif;
 $font-main: "Source Sans Pro", $font-generic;
-$font-headers: $font-main;
-$font-menu: $font-main;
 $font-code: "Droid Sans Mono", $font-generic;
-
-$w-touch: 36px;
-$w-menu: 230px;
