--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -11,3 +11,8 @@ $bg-code: rgba(#c8d1cf, 0.15);
 $font-generic: arial, helvetica, sans-serif;
 $font-main: "Source Sans Pro", $font-generic;
 $font-code: "Droid Sans Mono", $font-generic;
+
+$c-orange: #F57C00;
+$c-property: #0d47a1;
+$c-selector: $c-hover;
+$c-include: #7b1fa2;
