--- a/scss/base.scss
+++ b/scss/base.scss
@@ -147,7 +147,7 @@ figure {
     height: 6rem;
     padding-right: 2rem;
     font-size: 1.6rem;
-    background-color: $c-header;
+    background-color: $c-main;
 }
 
 
