--- a/scss/home.scss
+++ b/scss/home.scss
@@ -38,7 +38,7 @@ section {
     &:nth-child(3n-1) .img-border {
         padding-top: 2.3rem;
         padding-left: 2.1rem;
-        background-color: $c-header;
+        background-color: $c-main;
     }
 
     &-visual {
