--- a/scss/_print.scss
+++ b/scss/_print.scss
@@ -1,54 +1,53 @@
 @import "_variables";
 
 @media print {
-  @page {
-    font-family: $font-main;
-    font-size: 16pt;
-    line-height: 14pt;
-    color: $c-text;
-  }
+    @page {
+        font-family: $font-main;
+        font-size: 16pt;
+        line-height: 14pt;
+        color: $c-text;
+    }
 
-  h1 {
-    margin-top: 0;
-    margin-bottom: 28px;
-    font-size: 20pt;
-    font-size: 24pt;
-  }
+    h1 {
+        margin-top: 0;
+        margin-bottom: 28px;
+        font-size: 24pt;
+    }
 
-  h2 {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    font-size: 18pt;
-    line-height: 22pt;
-  }
+    h2 {
+        margin-top: 30px;
+        margin-bottom: 10px;
+        font-size: 18pt;
+        line-height: 22pt;
+    }
 
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin-top: 28px;
-    margin-bottom: 10px;
-    font-size: 11pt;
-    line-height: 20pt;
-  }
+    h3,
+    h4,
+    h5,
+    h6 {
+        margin-top: 28px;
+        margin-bottom: 10px;
+        font-size: 11pt;
+        line-height: 20pt;
+    }
 
-  a {
-    color: $c-header;
-    text-decoration: none;
-  }
+    a {
+        color: $c-main;
+        text-decoration: none;
+    }
 
-  article a:after {
-    content: " (" attr(href) ")";
-    font-size: 12pt;
-  }
+    article a::after {
+        content: " (" attr(href) ")";
+        font-size: 12pt;
+    }
 
-  blockquote {
-    font-style: italic;
-    font-size: 11pt;
-    font-weight: bold;
-    line-height: 14pt;
-  }
+    blockquote {
+        font-style: italic;
+        font-size: 11pt;
+        font-weight: bold;
+        line-height: 14pt;
+    }
 
-  nav,
-  .nav-arrows { display: none; }
+    nav,
+    .nav-arrows { display: none; }
 }
